# research-claw

./: .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml  settings.default.json
README/guide/: 01_Overview_en.md  01_项目概览.md  07_Usage_Guide_en.md  07_使用指南.md  webui_guide_en.md  webui操作手册.md
README/im_config/: DingTalk_EN.md  DingTalk_ZH.md  Feishu_EN.md  Feishu_ZH.md  QQBot_EN.md  QQBot_ZH.md  Telegram_EN.md  Telegram_ZH.md  add_notifaction_EN.md  add_notifaction_ZH.md  notifaction_DingTalk_EN.md  notifaction_DingTalk_ZH.md  notifaction_QQBot_EN.md  notifaction_QQBot_ZH.md  notifaction_Telegram_EN.md  notifaction_Telegram_ZH.md  notifaction_email_EN.md  notifaction_email_ZH.md  notifaction_feishu_EN.md  notifaction_feishu_ZH.md
agent/: context.py  git_agent.py  loop.py  task_agent.py
agent/memory/: logger.py
agent/scheduler/: batch_runner.py  engine.py  executor.py  planner.py  schema.py
agent/services/: commands.py  gateway_server.py
agent/tools/: bash.py  browser.py  files.py  google_scholar.py  loader.py  memory.py  notify.py  openalex_search.py  overleaf.py  project.py  pubmed_search.py  scheduler_tool.py  swarm.py  (+3 more)
bus/: events.py  queue.py
channels/: __init__.py  base.py  feishu.py  im_dingtalk.py  im_qq.py  telegram.py
cli/: main.py  setup.py  wizard.py
config/: commands.json  diagnostics.py  features.json  i18n.json  i18n.py  loader.py  registry.py  schema.py  vfs.json
core/: overleaf_compat.py  project.py
providers/: base.py  litellm_provider.py  openai_provider.py
scripts/: dump_tools.py  simulate_feishu.py  test_stepfun.py
(+57 files in other folders)
