[project]
name = "open-research-claw"
version = "0.1.0"
description = "Open Research Claw - AI Research Assistant with Overleaf integration"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "agent*", "config*", "bus*", "channels*", "providers*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
